--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,30 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    display: inline-block
+}
+
+ul, li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 1170px;
+    margin: 0 auto;
+    padding:0 15px;
+}
+
+
+body {
+
+
+
+}
+
+.header__top {
+    background-color: #303030;
+}
