--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,77 @@ ul, li {
     padding:0 15px;
 }
 
+body {   
+    font-family: 'PT Serif', serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #5e5e5e;
+}
 
-body {
-
-
-
+.header {
+    font-family: 'Roboto', sans-serif;
 }
 
 .header__top {
     background-color: #303030;
+}
+
+.header__btn {
+    float: right;
+    line-height: 36px;   
+    color: #1b1b1b;
+    background-color: #ffc222;
+    padding: 5px 20px 4px 50px;
+}
+
+.header__contacts:after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+.header__phone,
+.header__email {
+    color: #cbcacb;
+    letter-spacing: 0.25px;
+    line-height: 45px; 
+}
+
+.header__phone {
+    padding-left: 20px;
+    padding-right: 30px;
+}
+
+.header__email {
+    padding-left: 24px;
+}
+
+.header__content {
+    padding: 34px 0px 23px;
+}
+
+.header__content-inner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu li {
+    display: inline-block;
+}
+
+.menu a {
+    color: #323232;
+    font-size: 16px;
+    line-height: 36px;
+    border: 1px solid transparent;
+    padding: 0px 16px;
+}
+
+.menu a:hover {
+    border: 1px solid #ffc222;
+}
+
+.menu li+li {
+    padding-left: 10px;
 }
