--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,15 @@ body {
     color: #1b1b1b;
     background-color: #ffc222;
     padding: 5px 20px 4px 50px;
+    position: relative;
+}
+
+.header__btn:before {
+    content: "\f0b1";
+    font-family: 'icomoon';
+    position: absolute;
+    left: 22px;
+    color: #1b1b1b;
 }
 
 .header__contacts:after {
@@ -53,7 +62,8 @@ body {
 .header__email {
     color: #cbcacb;
     letter-spacing: 0.25px;
-    line-height: 45px; 
+    line-height: 45px;
+    position: relative; 
 }
 
 .header__phone {
@@ -61,8 +71,24 @@ body {
     padding-right: 30px;
 }
 
+.header__phone:before {
+    content: "\f095";
+    font-family: 'icomoon';
+    position: absolute;
+    left: 0;
+    color: #ffc222;
+}
+
 .header__email {
     padding-left: 24px;
+}
+
+.header__email:before {
+    content: "\f003";
+    font-family: 'icomoon';
+    position: absolute;
+    left: 0;
+    color: #ffc222;
 }
 
 .header__content {
@@ -84,6 +110,7 @@ body {
     line-height: 36px;
     border: 1px solid transparent;
     padding: 0px 16px;
+    transition: all 0.3s;
 }
 
 .menu a:hover {
