--- a/css/style.css
+++ b/css/style.css
@@ -328,4 +328,36 @@ right: 0;
     margin-right: 30px;
 }
 
+.about {
+    background-image: url(../img/about-fon.jpg);
+    background: cover;
+    background-position: center;
+    min-height: 300px;
+    background-repeat: no-repeat;
+    padding: 25px 0px 45px;
+}
+
+.about__inner {
+    max-width: 545px;
+}
+
+.about__title {
+    padding: 10px 0px 25px;
+    font-size: 24px;
+    line-height: 24px;
+    color: #fff;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+}
+
+.about__text {
+    margin-bottom: 30px;
+    letter-spacing: 0.1px;
+    line-height: 24px;
+    color: #d3d2d2;
+}
+
+.about__btn.default-btn:after {
+    color: #000;
+}
   
