Create section (news) and ...
Create section (news) and download news-1-2.jpg

--- a/css/style.css
+++ b/css/style.css
@@ -235,21 +235,24 @@ body {
     padding: 50px 0px 30px;
 }
 
-.services__top {
+.services__top,
+.news__top {
     display: flex;
     justify-content: space-between;
     margin-bottom: 60px;
 }
 
 .services__title-box,
-.form__title-box {
+.form__title-box,
+.news__title-box {
     max-width: 520px;
     padding-left: 140px;
     position: relative;
 }
 
 .services__title-box:before,
-.form__title-box:before {
+.form__title-box:before,
+.news__title-box:before {
     content: "";
     position: absolute;
     width: 100px;
@@ -260,7 +263,8 @@ body {
 }
 
 .services__title,
-.form__title {
+.form__title,
+.news__title {
     font-style: 24px;
     font-weight: 500;
     line-height: 24px;
@@ -270,11 +274,13 @@ body {
 }
 
 .services__text,
-.form__text {
+.form__text,
+.news__text {
     letter-spacing: 0.1px;
 }
 
-.services__btn a {
+.services__btn a,
+.news__btn a {
     color: #373636;
     line-height: 24px;
     letter-spacing: 0.25px;
@@ -506,6 +512,8 @@ body {
     float: right;
 }
 
+/* Блок advantages */
+
 .advantages {
     padding: 55px 0px 40px;
     background-image: url(../img/adv-fon.jpg);
@@ -563,4 +571,8 @@ body {
     letter-spacing: 0.1px;
 }
 
-4:31:45 / 7:10:55
+/* Блок news */
+
+.news {
+    padding: 50px 0px 110px;
+}
