--- a/css/style.css
+++ b/css/style.css
@@ -453,45 +453,52 @@ body {
 }
 
 .form__box-inner .jq-selectbox__dropdown {
-	width: 100%;
-	margin: 2px 0 0;
-	padding: 0;
-	border: 1px solid #e6e6e6;
-	background: #FFF;
-	box-shadow: 0 2px 10px rgba(0,0,0,.2);
+    width: 100%;
+    margin: 2px 0 0;
+    padding: 0;
+    border: 1px solid #e6e6e6;
+    background: #FFF;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
 }
 
 /* jquery.formstyle.theme.css перенос */
 
 .form__box-inner .jq-selectbox li {
-	min-height: 18px;
-	padding: 5px 17px 6px;
-	color: #231F20;
+    min-height: 18px;
+    padding: 5px 17px 6px;
+    color: #231F20;
 }
+
 .form__box-inner .jq-selectbox li.selected {
-	background-color: #A3ABB1;
-	color: #FFF;
+    background-color: #A3ABB1;
+    color: #FFF;
 }
+
 .form__box-inner .jq-selectbox li:hover {
-	background-color: #08C;
-	color: #FFF;
+    background-color: #08C;
+    color: #FFF;
 }
+
 .form__box-inner .jq-selectbox li.disabled {
-	color: #AAA;
+    color: #AAA;
 }
+
 .form__box-inner .jq-selectbox li.disabled:hover {
-	background: none;
+    background: none;
 }
+
 .form__box-inner .jq-selectbox li.optgroup {
-	font-weight: bold;
+    font-weight: bold;
 }
+
 .form__box-inner .jq-selectbox li.optgroup:hover {
-	background: none;
-	color: #231F20;
-	cursor: default;
+    background: none;
+    color: #231F20;
+    cursor: default;
 }
+
 .form__box-inner .jq-selectbox li.option {
-	padding-left: 25px;
+    padding-left: 25px;
 }
 
 
@@ -530,7 +537,7 @@ body {
     justify-content: space-between;
 }
 
-.advantages-item  {
+.advantages-item {
     max-width: 360px;
     padding: 0px 20px;
 }
@@ -539,7 +546,7 @@ body {
     font-size: 18px;
     line-height: 24px;
     font-weight: 500;
-    font-family: 'Roboto', sans-serif;   
+    font-family: 'Roboto', sans-serif;
     padding: 60px 0px 15px;
     position: relative;
 }
@@ -574,5 +581,92 @@ body {
 /* Блок news */
 
 .news {
-    padding: 50px 0px 110px;
+    padding: 55px 0px 110px;
+    background-color: #f9f9f9;
+}
+
+.news__inner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.news__slider {
+    max-width: 555px;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 0px 5px 15.36px 0.64px rgba(128, 127, 127, 0.13);
+    padding: 60px 35px 45px 70px;
+    position: relative;
+}
+
+.news__slider:before {
+    content: "\f10e";
+    font-family: 'icomoon';
+    position: absolute;
+    top: 0;
+    left: 70px;
+    color: #fff;
+    font-size: 16px;
+    width: 65px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    background-color: #ffc222;
+}
+
+.news__blog {
+    max-width: 260px;
+    width: 100%;
+}
+
+.news__images {
+    position: relative;
+}
+
+.news__date {
+    position: absolute;
+    background-color: #ffc222;
+    height: 55px;
+    width: 50px;
+    color: #fff;
+    text-align: center;
+    padding-top: 30px;
+    font-weight: 700;
+    top: 0px;
+    left: 10px;
+}
+
+.news__blog-title {
+    font-style: 16px;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.5px;
+    color: #242424;
+    padding: 12px 0;
+}
+
+.news__blog-text {
+    letter-spacing: 0.1px;
+    color: #5e5e5e;
+}
+
+.news__slider-title {
+    font-size: 18px;
+    line-height: 24px;
+    color: #242424;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.5px;
+    margin-bottom: 15px;
+}
+
+.news__slider-text {
+    margin-bottom: 30px;
+}
+
+.news__slider-autor {
+    letter-spacing: 0.1px;
+    color: #212020;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
 }
