--- a/css/style.css
+++ b/css/style.css
@@ -695,4 +695,47 @@ body {
 
 /* Блок footer */
 
-footer__content
+.footer__content {
+    background-color: #595959;
+    padding: 20px 0px 30px;
+}
+
+.footer__inner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__inner .header__btn {
+    float: none;
+    display: inline-block;
+}
+
+.footer__map {
+    padding-top: 10px;
+}
+
+/* .footer__map iframe {
+    max-width: 630px;
+    width: 100%;
+    height: 250px;
+} */
+
+.footer_title {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #fff;
+    line-height: 36px;
+    letter-spacing: 0.5px;
+}
+
+.footer__text {
+    color: #d3d2d2;
+    margin-bottom: 20px;
+}
+
+.footer__info {
+    max-width: 360px;
+}
+
+
