--- a/css/style.css
+++ b/css/style.css
@@ -738,4 +738,30 @@ body {
     max-width: 360px;
 }
 
+.footer__list {
+    padding-top: 10px;
+}
+
+.footer__list li {
+    margin-top: 10px;
+}
+
+.footer__list a {
+    font-style: 16px;
+    line-height: 24px;
+    letter-spacing: 0.25px;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+}
+
+.footer__copy {
+    background-color: #303030;
+    text-align: center;
+    font-style: 12px;
+    line-height: 24px;
+    padding: 8px 0;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+}
+
 
