--- a/css/media.css
+++ b/css/media.css
@@ -2,4 +2,22 @@
     .header__btn {
         float: none;
     }
+    .header__contacts {
+        text-align: center;
+    }
+    .header__btn:before {
+        display: none;
+    }
+}
+
+@media (max-width: 400px) {
+    .header__btn:before {
+        display: block;
+    }
+}
+
+@media (max-width: 375px) {
+    .header__email {
+        padding-right: 30px;
+    }
 }
