--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@ body {
     color: #1b1b1b;
     background-color: #ffc222;
     padding: 5px 20px 4px 50px;
+    font-style: 16px;
+    display: block;
     position: relative;
 }
 
