--- a/css/media.css
+++ b/css/media.css
@@ -8,6 +8,30 @@
     .header__btn:before {
         display: none;
     }
+    .header__btn-menu {
+        display: block;
+    }
+    .menu ul {
+        display: none;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin-top: 20px;
+        z-index: 50;
+    }
+    .menu li {
+        display: block;
+        text-align: center;
+    }
+    .menu a {
+        display: block;
+        background-color: #ffc222;
+        border-top: 1px solid #fff;
+        border-bottom: 1px solid #fff;
+    }
+    .menu li + li {
+        padding-left: 0;
+    }
 }
 
 @media (max-width: 400px) {
@@ -19,5 +43,13 @@
 @media (max-width: 375px) {
     .header__email {
         padding-right: 30px;
+    }
+}
+
+
+
+@media (min-width: 700px) {
+    .menu ul {
+        display: block !important;
     }
 }
