--- a/css/style.css
+++ b/css/style.css
@@ -810,4 +810,9 @@ body {
     border: none;
 }
 
+.header__btn-menu {
+    display: none;
+    font-size: 28px;
+}
+
 /* Адаптация под мобильную версию разрешения */
