--- a/css/media.css
+++ b/css/media.css
@@ -1,16 +1,56 @@
+@media (max-width: 1156px) {
+    .services__items {
+        display: block;
+    }
+
+    .services__item {
+        max-width: 80%;
+        min-height: 330px;
+        margin: 30px auto;
+    }
+}
+
+@media (max-width: 900px) {
+    .slider .slick-btn {
+        display: none !important;
+    }
+
+    .services__top {
+        display: block;
+    }
+
+    .services__title-box {
+        padding-left: 0;
+        text-align: center;
+        margin: 0 auto 30px;
+    }
+
+    .services__title-box:before {
+        display: none;
+    }
+
+    .services__btn {
+        text-align: center;
+    }
+}
+
 @media (max-width: 700px) {
     .header__btn {
         float: none;
     }
+
     .header__contacts {
         text-align: center;
     }
+
     .header__btn:before {
         display: none;
     }
+
     .header__btn-menu {
         display: block;
     }
+
     .menu ul {
         display: none;
         position: absolute;
@@ -19,18 +59,39 @@
         margin-top: 20px;
         z-index: 50;
     }
+
     .menu li {
         display: block;
         text-align: center;
     }
+
     .menu a {
         display: block;
         background-color: #ffc222;
         border-top: 1px solid #fff;
         border-bottom: 1px solid #fff;
     }
-    .menu li + li {
+
+    .menu li+li {
         padding-left: 0;
+    }
+}
+
+@media (max-width: 600px) {
+    .services__item {
+        max-width: 100%;
+        min-height: 370px;
+        margin: 30px auto;
+    }
+}
+
+@media (max-width: 414px) {
+    .slider__title {
+        font-size: 24px;
+    }
+
+    .slider__text {
+        font-size: 16px;
     }
 }
 
