Bug fix (about).

--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ body {
 
 .about {
     background-image: url(../img/about-fon.jpg);
-    background: cover;
+    background-size: cover;
     background-position: center;
     min-height: 300px;
     background-repeat: no-repeat;
