Update section (news).
Update section (news).

--- a/css/media.css
+++ b/css/media.css
@@ -11,6 +11,32 @@
     .form__inner {
         background-image: none;
     }
+
+    .news__inner {
+        display: block;
+    }
+
+    .news__slider {
+        max-width: 100%;
+        margin-bottom: 90px;
+    }
+
+    .news__blog {
+        max-width: 100%;
+        display: block;
+        margin-bottom: 30px;
+    }
+
+    .news__blog:after {
+        content: "";
+        clear: both;
+        display: block;
+    }
+
+    .news__images {
+        float: left;
+        margin-right: 50px;
+    }
 }
 
 @media (max-width: 900px) {
@@ -18,7 +44,8 @@
         display: none !important;
     }
 
-    .services__top {
+    .services__top,
+    .news__top {
         display: block;
     }
 
@@ -36,7 +63,8 @@
         display: none;
     }
 
-    .services__btn {
+    .services__btn,
+    .news__btn {
         text-align: center;
     }
 
@@ -54,6 +82,19 @@
 
     .form__box-inner .jq-selectbox__select {
         margin-bottom: 10px;
+    }
+
+    .form {
+        padding-bottom: 25px;
+    }
+
+    .advantages__inner {
+        display: block;
+    }
+
+    .advantages-item {
+        max-width: 100%;
+        margin-bottom: 30px;
     }
 }
 
@@ -108,6 +149,32 @@
     }
 }
 
+@media (max-width: 540px) {
+    .news__slider {
+    padding: 50px 15px 25px 25px;
+    }
+
+    .news__slider:before {
+        left: 25px;
+    }
+
+    .news__slider-inner .slick-next {
+        right: -20px;
+    }
+
+    .news__slider-inner .slick-prev {
+        right: 35px;
+    }
+
+    .news__images {
+        float: none;
+    }
+
+    .news__slider-inner .slick-btn {
+        bottom: -90px;
+    }
+}
+
 @media (max-width: 414px) {
     .slider__title {
         font-size: 24px;
@@ -121,6 +188,10 @@
 @media (max-width: 400px) {
     .header__btn:before {
         display: block;
+    }
+
+    .advantages-item {
+        padding: 0;
     }
 }
 
