--- a/css/media.css
+++ b/css/media.css
@@ -37,6 +37,22 @@
         float: left;
         margin-right: 50px;
     }
+    .news {
+        padding-bottom: 60px;
+    }
+    .footer__info {
+        max-width: 456px;
+        margin-bottom: 25px;
+    }
+}
+
+@media (max-width: 1050px) {
+    .footer__inner {
+        display: block;
+    }
+    .footer__map {
+        max-width: 100%;
+    }
 }
 
 @media (max-width: 900px) {
@@ -109,6 +125,10 @@
 
     .header__btn:before {
         display: none;
+    }
+
+    .footer__info .header__btn:before {
+        display: block;
     }
 
     .header__btn-menu {
