--- a/css/style.css
+++ b/css/style.css
@@ -714,13 +714,13 @@ body {
 
 .footer__map {
     padding-top: 10px;
-}
-
-/* .footer__map iframe {
     max-width: 630px;
     width: 100%;
-    height: 250px;
-} */
+}
+
+.footer__map iframe {
+    width: 100%;
+}
 
 .footer_title {
     font-family: 'Roboto', sans-serif;
