--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@ body {
     color: #5e5e5e;
 }
 
+/* Header */
+
 .header {
     font-family: 'Roboto', sans-serif;
 }
@@ -127,6 +129,8 @@ body {
 #modal {
     display: none;
 }
+
+/*  Slider */
 
 .slider {
     background-image: url(../img/slider-fon.jpg);
@@ -231,7 +235,7 @@ body {
     left: 0;
 }
 
-/* Section (about) */
+/* Services */
 
 .services {
     padding: 50px 0px 30px;
@@ -341,6 +345,8 @@ body {
     margin-right: 30px;
 }
 
+/* About */
+
 .about {
     background-image: url(../img/about-fon.jpg);
     background-size: cover;
@@ -373,6 +379,8 @@ body {
 .about__btn.default-btn:after {
     color: #000;
 }
+
+/* Form */
 
 .form {
     padding-top: 30px;
@@ -503,9 +511,6 @@ body {
     padding-left: 25px;
 }
 
-
-
-
 .form__box-inner textarea {
     outline: none;
     border: solid 1px #e6e6e6;
@@ -521,7 +526,7 @@ body {
     float: right;
 }
 
-/* Блок advantages */
+/* Advantages */
 
 .advantages {
     padding: 55px 0px 40px;
@@ -580,7 +585,7 @@ body {
     letter-spacing: 0.1px;
 }
 
-/* Блок news */
+/* News */
 
 .news {
     padding: 55px 0px 110px;
@@ -695,7 +700,7 @@ body {
     color: #dadada;
 }
 
-/* Блок footer */
+/* Footer */
 
 .footer__content {
     background-color: #595959;
@@ -787,7 +792,7 @@ body {
     color: #fff;
 }
 
-/* Редактирование окна вызова сбора информации */
+/* #Modal (окно вызова) сбора информации */
 
 #modal {
     width: 300px;
@@ -810,6 +815,8 @@ body {
     border: none;
     margin: 0;
 }
+
+/* Скрытие кнопки меню */
 
 .header__btn-menu {
     display: none;
